--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-flask==2.3.3
-nltk==3.9.1
-spacy==3.8.2
-pandas==2.2.3
-requests==2.32.3
-numpy==2.2.1
-tqdm==4.67.1
-thinc==8.3.3
 blis==1.1.0
-srsly==2.5.0
+catalogue==2.0.10
 cymem==2.0.10
+numpy==2.2.1
+pandas==2.2.3
 preshed==3.0.9
-wasabi==1.1.3
-typer==0.15.1
+regex==2024.11.6
+requests==2.32.3
+spacy==3.8.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-catalogue==2.0.10
-regex==2024.11.6
+srsly==2.5.0
+thinc==8.3.3
+tqdm==4.67.1
+typer==0.15.1
+wasabi==1.1.3
+flask>=2.0
+nltk>=3.9
+scikit-learn>=1.2
+
