--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,8 @@
 services:
   - type: web
-    name: my-flask-app
+    name: intent-based-chatbot
     env: python
     runtime: python-3.12.4
     plan: free
-    buildCommand: |
-      apt-get update && apt-get install -y build-essential python3-dev
-      pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn flaskchatbot:app
