--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,7 @@ services:
     env: python
     runtime: python-3.12.4
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install -r requirements.txt
+      python -c "import nltk; nltk.download('punkt', download_dir='./.nltk_data'); nltk.download('wordnet', download_dir='./.nltk_data'); nltk.download('omw-1.4', download_dir='./.nltk_data')"
     startCommand: gunicorn flaskchatbot:app
